--- a/MovieNight/Base.lproj/Main.storyboard
+++ b/MovieNight/Base.lproj/Main.storyboard
@@ -150,5 +150,23 @@
             </objects>
             <point key="canvasLocation" x="349" y="522"/>
         </scene>
+        <!--Movie Preference Selector View Controller-->
+        <scene sceneID="iHz-Ou-dfv">
+            <objects>
+                <viewController id="C7x-0q-L93" customClass="MoviePreferenceSelectorViewController" customModule="MovieNight" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3My-sR-Qmm"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Ak-qR-n6o"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hGN-xD-AkD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eM9-I9-nIM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="349" y="1245"/>
+        </scene>
     </scenes>
 </document>
